Fixed folder dropdown not working on iOS.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -164,6 +164,10 @@ body {
 .navigation-item {
 	@media @tablet {
 		display: block;
+
+		&.folder {
+			cursor: pointer;
+		}
 	}
 }
 
